Metal: Partial texture update failing when using float images. #103658

Closed
opened 2023-01-05 13:03:50 +01:00 by Jeroen Bakker · 6 comments
Member

System Information
Operating system: macOS-12.6-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Ultra 1.2

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-05 11:40, hash: 4813c37ae2
Worked: (newest version of Blender that worked as expected)

Short description of error
With the metal backend enabled, 3d texturepainting on float images only show the last updated partial image.
Issue doesn't appear on byte textures.

Exact steps for others to reproduce the error

  • In user pref enable Metal as GPU Backend.
  • Go to texture paint mode.
  • Select single texture, create a float texture with a resolution higher then 256x256.
  • Start painting.

See file where the mentioned steps are already done. Just paint inside the 3d viewport.
metal-texturepainting.blend

Screen Recording 2023-01-05 at 13.02.06.mov

**System Information** Operating system: macOS-12.6-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Ultra 1.2 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-05 11:40, hash: `4813c37ae2` Worked: (newest version of Blender that worked as expected) **Short description of error** With the metal backend enabled, 3d texturepainting on float images only show the last updated partial image. Issue doesn't appear on byte textures. **Exact steps for others to reproduce the error** * In user pref enable Metal as GPU Backend. * Go to texture paint mode. * Select single texture, create a float texture with a resolution higher then 256x256. * Start painting. See file where the mentioned steps are already done. Just paint inside the 3d viewport. [metal-texturepainting.blend](https://archive.blender.org/developer/F14115210/metal-texturepainting.blend) [Screen Recording 2023-01-05 at 13.02.06.mov](https://archive.blender.org/developer/F14115212/Screen_Recording_2023-01-05_at_13.02.06.mov)
Author
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Michael Parkin-White was assigned by Jeroen Bakker 2023-01-05 13:04:57 +01:00

Looks like there were two separate issues occurring here:

  1. Sometimes, Texture::update_sub is called with an extent dimension of zero, causing a validation failure in Metal. Adding an early exit for these cases fixes this.

  2. When a staging texture is used for the texture update (required when format is not directly writeable and format conversion is needed), the final staging texture blit overrides all existing contents of the texture, rather than just the region which is updated.

I'm trying to determine whether it is more optimal to initialise the staging texture with the existing textures contents via a blit operation, and then blit the entire staging texture back (less CPU API overhead), or, only update the region modified (Increased API overhead for texture arrays and cube maps as each slice requires separate blit call, but very slightly reduced GPU overhead for the simple case.)

Will submit an initial patch anyhow. Both solutions are immeasurably different, so this can always be looked at again in future. Texture updating in general is not particularly nice, due to all of the complexity of how the texture can be updated.

Patch coming shortly.

Looks like there were two separate issues occurring here: 1) Sometimes, Texture::update_sub is called with an extent dimension of zero, causing a validation failure in Metal. Adding an early exit for these cases fixes this. 2) When a staging texture is used for the texture update (required when format is not directly writeable and format conversion is needed), the final staging texture blit overrides all existing contents of the texture, rather than just the region which is updated. I'm trying to determine whether it is more optimal to initialise the staging texture with the existing textures contents via a blit operation, and then blit the entire staging texture back (less CPU API overhead), or, only update the region modified (Increased API overhead for texture arrays and cube maps as each slice requires separate blit call, but very slightly reduced GPU overhead for the simple case.) Will submit an initial patch anyhow. Both solutions are immeasurably different, so this can always be looked at again in future. Texture updating in general is not particularly nice, due to all of the complexity of how the texture can be updated. Patch coming shortly.

This issue was referenced by d3f626b535

This issue was referenced by d3f626b535313af616b0574958b2d064fc88c5d3

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Philipp Oeser removed the
Interest
EEVEE & Viewport
label 2023-02-09 15:11:56 +01:00
Jeroen Bakker added this to the EEVEE & Viewport project 2023-02-13 11:28:21 +01:00
Jeroen Bakker added this to the 3.5 milestone 2023-02-13 11:28:57 +01:00

Just looking through older issues, I believe this has been resolved by the above referenced commit, but was not automatically closed.

Just looking through older issues, I believe this has been resolved by the above referenced commit, but was not automatically closed.
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-03-03 20:46:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103658
No description provided.